--- a/style/src/_styles.scss
+++ b/style/src/_styles.scss
@@ -534,10 +534,11 @@ pre,
         position: relative;
         padding: 7px 10px;
         line-height: 23px;
+        overflow-x: hidden;
 
         label {
             display: block;
-            width: 200px;
+            width: 180px;
             @include noflex; 
             font-size: 13px;
             color: #bbb;
@@ -585,7 +586,7 @@ pre,
     
     .config-parameters-row {
         position: relative;
-        margin: 10px;
+        margin: 15px;
         border-radius: 4px;
         box-shadow: inset 0 0 4px rgba(0,0,0,.8);
         padding: 0; 
